--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body style="font-family: sans-serif;">
-	<h1 style="color: red; text-align: center;">AX 2018 Less One Week Away!
+	<h1 style="color: red; text-align: center;">AX 2018 Less Than One Week Away!
 		<br>
-		<img src="https://i.imgur.com/CPlVUKk.png" style="max-width:60%;">
+		<img src="https://i.imgur.com/CPlVUKk.png" style="max-width:70%;">
 	</h1>
 	<p>
 		<h2>
@@ -24,39 +24,39 @@
 	</p>
 	<br>
 	<p>
-		<h3>How to check your lodging!</h3>
+		<h3><u>How to check your lodging!</u></h3>
 		Follow along with these steps to check your lodging and roommates for AX 2018!
 		<br>
 		<ul>
 			<li>Log into your Shiftboard account!</li>
 			<li>Click on your own name in the upper right corner!
 				<br>
-				<img src="https://i.imgur.com/r2jhKnv.png" style="max-width: 60%;"> 
-			</li>
+				<img src="https://i.imgur.com/r2jhKnv.png" style="max-width: 70%;"> 
+			</li><br>
 			<li>Click on "Profile" on the upper left!
 				<br>
-				<img src="https://i.imgur.com/bGTppBu.png" style="max-width: 60%;">
-			</li>
+				<img src="https://i.imgur.com/bGTppBu.png" style="max-width: 70%;">
+			</li><br>
 			<li>Make sure "Additional Information" is selected!
 				<br>
-				<img src="https://i.imgur.com/YN6Vgkx.png" style="max-width: 60%;">
-			</li>
+				<img src="https://i.imgur.com/YN6Vgkx.png" style="max-width: 70%;">
+			</li><br>
 			<li>Scroll down! The location where you're staying can be found on the right!
 				<br>
 				<b>Note: The numbers after the location are only for organizational purposes. They are not room numbers!</b>
 				<br>
 				You can confirm your roommates in the section on the left!
 				<br>
-				<img src="https://i.imgur.com/4omn0DF.png" style="max-width: 60%;">
+				<img src="https://i.imgur.com/4omn0DF.png" style="max-width: 70%;">
 			</li>
 		</ul>
 		<br>
-		<h3>A Guide to Getting a Parking Pass!</h3>
+		<h3><u>A Guide to Getting a Parking Pass!</u></h3>
 		If you meet the criteria for parking (1. Have at least three volunteers associated with the parking pass OR 2. Signed up to receive parking instead of housing), you are eligible to receive a parking pass! 
 		<br>
-		Otherwise, you are welcome to go to the front desk of whichever area you are staying to request to purchase a parking pass at the rate of $12 per night. 
+		Otherwise, you are welcome to go to the front desk of whichever area you are staying to purchase a parking pass at the rate of $12 per night. 
 		<ul>
-			<li>If you have signed up for lodging, the only way you can receive a parking pass is through having a carpool. 
+			<li>If you have signed up for lodging, the only way you can receive a free parking pass is through having a carpool. 
 				<br>
 				You must have at least three people (including yourself) in the car!
 				<br>
@@ -65,8 +65,8 @@
 				To list a carpool, fill in at least two other volunteers (don't put your own name here!) in the available fields on the lower left of the "Additional Information" section. 
 				<br>
 				<img src="https://i.imgur.com/PVqxo86.png" style="max-width: 60%;">
-			</li>
-			<li>In other words, you need three people total. 
+			</li><br>
+			<li>In other words, you need at least three people total. 
 				<br>
 				You are the <b>first person.</b>
 				<br>
@@ -75,13 +75,13 @@
 				Your second carpool buddy name is the <b>third person.</b>
 				<br>
 				<img src="https://i.imgur.com/QNPxKol.png" style="max-width: 60%;">
-			</li>
+			</li><br>
 			<li>Note: If you want to be super awesome, we'd really appreciate groups adding a fourth person to their carpool. 
 				<br>
 				If only there were more space in downtown LA. 
 				<br>
 				<img src="https://i.imgur.com/77MDBRE.png" style="max-width: 60%;">
-			</li>
+			</li><br>
 			<li>To pick up the parking pass, make sure you have completed the above steps/complete all criteria, and go to the USC Radisson (addresses are listed at the bottom). There will be a Volunteer Resources team in the lobby available to process your parking permit. 
 				<br>
 				Once there, you'll be asked if you would like to park in the Radisson structure, at Cardinal Gardens, or at Century Apartments. <b>Note: These are first come first served!</b>
@@ -90,9 +90,9 @@
 			</li>
 		</ul>
 		<br>
-		<h3>What to Do With That Spiffy Free Comp Code!</h3>
+		<h3><u>What to Do With That Spiffy Free Comp Code!</u></h3>
 		The comp code is provided for you to GIFT a 4-day attendee badge to someone else! 
-		You do NOT need to register for whoever you are gifting this code to. They are welcomed to register themselves as well! 
+		You do NOT need to register for whoever you are gifting this code to. They are welcomed to register themselves! 
 		<br>
 		Do NOT use this comp code on yourself! You will be receiving a volunteer badge, which will be your pass to Anime Expo!
 		<br>
@@ -101,29 +101,29 @@
 			<li>Go to the upper right portion of the "Additional Information" section, and copy the code listed there!
 				<br>
 				<img src="https://i.imgur.com/GXYNPLW.png" style="max-width: 60%;">
-			</li>
+			</li><br>
 			<li>Now go to the AX Website's registration page: <a href="https://www.anime-expo.org/register/" target="_blank">www.anime-expo.org/register</a>
 				<br>
 				<img src="https://i.imgur.com/XZId7x6.png" style="max-width: 60%;">
-			</li>
+			</li><br>
 			<li>Scroll down to the 4-Day Attendee Section and select "Register Now"
 				<br>
 				<img src="https://i.imgur.com/emL5rHm.png" style="max-width: 60%;">
-			</li>
+			</li><br>
 			<li>This will bring you to the EventBrite page for AX 2018!
 				<br>
 				<img src="https://i.imgur.com/egoBldY.png" style="max-width: 60%;">
-			</li>
+			</li><br>
 			<li>Scroll to the bottom of the listings of badges. There, you will find a little clickable link that says "Enter Promotional Code." Click that link!
 				<br>
 				<b>NOTE: AT NO POINT DO YOU EVER NEED TO ENTER ANY PAYMENT INFORMATION</b>
 				<br>
 				<img src="https://i.imgur.com/fjIPGwN.png" style="max-width: 60%;">
-			</li>
+			</li><br>
 			<li>Once you click that link, a text field will appear where you can enter the promotional comp code from your Shiftboard profile. Enter that code there and select "Apply."
 				<br>
 				<img src="https://i.imgur.com/nbZW9Cr.png" style="max-width: 60%;">
-			</li>
+			</li><br>
 			<li>After entering a code, there will be the option to select a 4-Day attendee badge that costs $0.00
 				<br>
 				Select that option and proceed with the registration process as normal. 
@@ -132,7 +132,7 @@
 			</li>
 		</ul>
 		<br>
-		<h3>Volunteer Resources Operating Hours!</h3>
+		<h3><u>Volunteer Resources Operating Hours!</u></h3>
 		This year, Volunteer Resources will be operating out of two locations! Please plan accordingly!
 		<ul>
 			<li>If you are arriving on Day -2 (July 2), Day -1 (July 3), or Day 0 (July 4), you will need to pick up your badge from Volunteer Resources in the Radisson Grand Ballroom. </li>
@@ -176,7 +176,7 @@
 			</li>
 		</ul>
 		<br>
-		<h3>What to do when you arrive!</h3>
+		<h3><u>What to do when you arrive!</u></h3>
 		We understand that it can get awfully confusing about what to do when you get onsite. Be sure to follow along with these steps as a handy guide!
 		<ul>
 			<li>BE SURE TO HAVE YOUR GOVERNMENT ISSUED (NOT EXPIRED) PHOTO ID WITH YOU!</li>
@@ -191,10 +191,32 @@
 				<br>
 				Keep in mind: As the number of general entrances has increased, sometimes there will be general entrances with faster entry times!
 			</li>
-
+			<br>
+			<li>ADDRESSES:
+				<ul>
+					<li><b>USC Radisson:</b>
+						<br>
+						3540 S Figueroa St, 
+						<br>
+						Los Angeles, CA 90007
+					</li>
+					<li><b>Cardinal Gardens:</b>
+						<br>
+						3131 McClintock Ave, 
+						<br>
+						Los Angeles, CA 90007
+					</li>
+					<li><b>Century Apartments:</b>
+						<br>
+						3115 Orchard Ave, 
+						<br>
+						Los Angeles, CA 90007
+					</li>
+				</ul>
+			</li>
 		</ul>
 		<br>
-		<h3>Where to find the shuttles!</h3>
+		<h3><u>Where to find the shuttles!</u></h3>
 		It's about 1.7 miles between the volunteer lodging and the LACC. But, there's a volunteer shuttle available 24 hours that will take you between all of these locations! Please note that in the morning, that is when all of your volunteer peers will also be making their way to the LACC from the lodging locations. The number of shuttles available in the morning has increased, but please prepare ample time to make it to your first shift!
 		<br>
 		<img src="https://i.imgur.com/soFI1h5.png" style="max-width: 60%;">
@@ -203,11 +225,11 @@
 			<li>Shuttles for the dorms are located here (note: due to noise complaints, the shuttle stop has been required to move to a different location from previous years):
 				<br>
 				<img src="https://i.imgur.com/8DeypiS.png" style="max-width: 60%;">
-			</li>
+			</li><br>
 			<li>Shuttles for the Radisson are located here:
 				<br>
 				<img src="https://i.imgur.com/kwQdcK7.png" style="max-width: 60%;">
-			</li>
+			</li><br>
 			<li>Shuttles for the LACC are located here (note: due to registration being moved outside, the shuttle location has moved to a different location from previous years):
 				<br>
 				<img src="https://i.imgur.com/SNUzN21.png" style="max-width: 60%;">
