--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 		</ul>
 		<br>
 		<h3>Day 4 (Sunday July 8) Volunteer Appreciation Party (VAP)!</h3>
-		Come celebrate the volunteer journey before that post-con depression sets in (jk, we all know that we look foward to next year the moment we see the doors close). All fun times eventually come to an end, so join us at the Volunteer Appreciation Party (VAP) for some bowling, food, and silly jokes at Lucky Strike in LA Live! 
+		Come celebrate the volunteer journey before that post-con depression sets in (jk, we all know that we look foward to next year the moment we see the doors close). It takes a lot of hard work to reach Day 4, so feel free to join us at the Volunteer Appreciation Party (VAP) for some bowling, food, and silly jokes at Lucky Strike in LA Live! 
 		<ul>
 			<li>Location: Lucky Strike (LA Live)
 				<br>
