--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<li>If you are arriving on Day -2 (July 2), Day -1 (July 3), or Day 0 (July 4), you will need to pick up your badge from Volunteer Resources in the Radisson Grand Ballroom. </li>
 			<li>The Radisson Grand Ballroom is located on the second floor (if you count the lobby as the first floor).</li>
 			<li>The Grand Ballroom can be accessed either through the stairs in the lobby, or through the elevators near the back of the lobby.</li>
-			<li>Volunteer Resources' Grand Ballroom Operating Hours:
+			<li><b>Volunteer Resources' Grand Ballroom Operating Hours:</b>
 				<ul>
 					<li>- Day -2 (July 2): 9AM - 9PM</li>
 					<li>- Day -1 (July 1): 9AM - 9PM</li>
@@ -152,7 +152,7 @@
 			</li>
 			<li>Volunteer swag (duffel bag, shirt, polo, bottle, pin) distribution will begin at 6 PM on Day 0 (July 4) in room 301AB in the Los Angeles Convention Center (LACC).</li>
 			<li>Also available at the LACC VR HQ in room 301 AB: Complimentary volunteer bag check, incident reports (you can also report if someone is being awesome and helpful), volunteer inquiry support (Is someone from your department missing? Are you unsure about your total hours? Please feel free to let us know!)</li>
-			<li>Volunteer Resources' LACC HQ (Room 301 AB) Operating hours:
+			<li><b>Volunteer Resources' LACC HQ (Room 301 AB) Operating hours:</b>
 				<ul>
 					<li>Day 0 (July 4): 6PM - 9PM</li>
 					<li>Day 1 (July 5): 9AM - 9PM</li>
@@ -166,7 +166,7 @@
 				The Volunteer Lounge is a space for all AX Volunteers to relax. With a nice view of the exhibit hall, some simple chairs and tables, and a friendly camaraderie, it's a great space to take a break and get away from the frantic pace of con. 
 				<br>
 			</li>
-			<li>Volunteer Lounge Operating Hours:
+			<li><b>Volunteer Lounge Operating Hours:</b>
 				<ul>
 					<li>Day 1 (July 5): 9AM - 9PM</li>
 					<li>Day 2 (July 6): 9AM - 9PM</li>
