fb caught typos - embarrassing typos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<li>Where to find the shuttles</li>
 				<li>Useful Volunteer Info at Your Fingertips!</li>
 				<li>Day 4 (Sunday July 8) Volunteer Appreciation Party (VAP)!</li>
-				<li>Friday June 26 @ 5PM Q&A Session!</li>
+				<li>Friday June 29 @ 5PM Q&A Session!</li>
 			</ul>
 		</h3>
 	</p>
@@ -146,7 +146,7 @@
 				</ul>
 			</li>
 			<li><b>NOTE: If you are coming in for a shift and need to pick up your badge outside of VR's operating hours, please reach out to your department manager or direct supervisor (ex: squad lead or shift lead). From there, they can move your shift and/or inform VR@spja.org about this case. </b></li>
-			<li>If you are arriving AFTER Day 0 (July 4), you will need to TEXT the VR hotline at (424)261-2977 upon arrival as operations at the USC Dorms ends at 9PM on Day 0
+			<li>If you are arriving AFTER Day 0 (July 4), you will need to TEXT the VR hotline at (424)261-2977 upon arrival as operations at the Radisson ends at 9PM on Day 0
 				<br>
 				Note: The VR Texting Hotline will only be actively monitored from Day -2 (July 2) through Day 4 (July 8).
 			</li>
@@ -258,11 +258,11 @@
 			<li>Time: Day 4 (July 8) from 5PM to 9PM!</li>
 		</ul>
 		<br>
-		<h3>Friday June 26 @ 5PM Q&A Session!</h3>
-		Do you have questions that weren't answered here? Was this waaay too much text to go through? Do you just want to chat with us about volunteering? Join us for the Q&A Session later today (June 26th) at 5PM! 
+		<h3>Friday June 29 @ 5PM Q&A Session!</h3>
+		Do you have questions that weren't answered here? Was this waaay too much text to go through? Do you just want to chat with us about volunteering? Join us for the Q&A Session later today (June 29th) at 5PM! 
 		<ul>
 			<li>Post your questions through the live chat! The VR Team will be on hand getting through as many as possible!</li>
-			<li>Time: Friday, June 26 @ 5PM PST</li>
+			<li>Time: Friday, June 29 @ 5PM PST</li>
 			<li>Link: <a href="https://youtu.be/dz5b2fjanPI" target="_blank">https://youtu.be/dz5b2fjanPI</a></li>
 		</ul>
 	</p>
